# first-demo

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Makefile  README.md
include/: cube.h  deco.h  demo.h  effect.h  logo.h  mod_music.h  resources.h  sine_scroller.h  star.h  starfield.h  utility.h
src/: chiptune.cpp  cube.cpp  cube_texture.cpp  deco.cpp  demo.cpp  font.cpp  logo.cpp  main.cpp  mod_music.cpp  sine_scroller.cpp  star.cpp  starfield.cpp  utility.cpp
